--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;700&display=swap">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/9b22d73af0.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
     <title>Weather Dash</title>
 </head>
 
 <body>
-
     <!-- header -->
-    <div class="container mainContainer">
+    <div class="mainContainer container">
         <div class="hero">
             <h1 class="has-text-centered">Weather Dash</h1>
             <div class="wrapper">
@@ -25,7 +25,6 @@
             </div>
         </div>
 
-
         <!-- container for search and recent searches -->
         <div class="container level">
             <div class="columns level-left">
@@ -33,7 +32,7 @@
                     <div class="columns">
                         <div class="field">
                             <!-- search bar and button -->
-                            <label id="search" class="label mr-5">Search for City</label>
+                            <label id="search" class="label title is-4 mr-5">Search for City</label>
                             <div class="field has-addons">
                                 <div class="control">
                                     <input class="input" id="userCity" type="text" placeholder="Search">
@@ -41,26 +40,36 @@
                                 <div class="control">
                                     <a class="button is-info" id="bttnSearch"><i class="fas fa-search" aria-hidden="true"></i></a>
                                 </div>
-                                <div id="search" class="columns">
-                                    <div id="recentSearches" class="column is-two-thirds-desktop is-full-tablet is-full-mobile">
-                                        <!-- recent searches will be displayed here -->
-                                    </div>
+                            </div>
+                            <div id="search" class="columns">
+                                <div id="recentSearches" class="column is-two-thirds-desktop is-full-tablet is-full-mobile">
+                                    <!-- recent searches will be displayed here -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <!-- Current Weather Conditions -->
-                <div class="containerConditions col-md-8 col-sm-12 float-right ">
-                    <div class="columns">
-                        <div class="column" id="currentConditions">
+                <div class="containerConditions tile is-ancestor">
+                    <div class="columns ">
+                        <article id="currentConditions" class="title column is-two-thirds-desktop is-full-tablet is-full-mobile is-child-box">
                             <!-- content will be appended here-->
-                        </div>
-                        <div class="column">
-                            <span id="iconSpan"></span><img style="font-size: 5rem" id="wicon">
-                        </div>
+                            <div class="column">
+                                <span id="iconSpan"></span><img style="font-size: 5rem;" id="wicon">
+                            </div>
+                        </article>
                     </div>
                 </div>
+            </div>
+        </div>
+
+        <!-- display results -->
+        <div class="tile is-ancestor">
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">Results</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
             </div>
         </div>
 
@@ -71,93 +80,84 @@
                     <h3>
             </div>
         </div>
-    </div>
-    <div class="columns justify-content-between daysForecast">
-        <div id="forecastDiv1" class="column is-one-fifth">
-            <h5 id=date1></h5>
-            <p id="temperature1" class="temperature"></p>
-            <img id="wicon1" alt="weather icon">
-            <p id="humidity1" class="humidity"></p>
-        </div>
-        <div id="forecastDiv2" class="column is-one-fifth">
-            <h5 id=date2></h5>
-            <p id="temperature2" class=" temperature mt-1"></p>
-            <img id="wicon2" alt="weather icon">
-            <p id="humidity2" class="humidity"></p>
-        </div>
-        <div id="forecastDiv3" class="column is-one-fifth">
-            <h5 id=date3></h5>
-            <p id="temperature3" class="mt-1"></p>
-            <img id="wicon3" alt="weather icon">
-            <p id="humidity3" class="humidity"></p>
-        </div>
-        <div id="forecastDiv4" class="column is-one-fifth">
-            <h5 class="text-center" id=date4></h5>
-            <p id="temperature4" class="mt-1 temperature"></p>
-            <img id="wicon4" alt="weather icon">
-            <p id="humidity4" class="humidity"></p>
-        </div>
-        <div id="forecastDiv5" class="column is-one-fifth">
-            <h5 class=text-center id=date5></h5>
-            <p id="temperature5" class="mt-2 temperature"></p>
-            <img id="wicon5" alt="weather icon">
-            <p id="humidity5" class="humidity"></p>
-        </div>
-    </div>
-    </div>
-    </div>
-    <!-- display results -->
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Results</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-    </div>
-    <!-- 5 day forcast results container -->
-    <div class="tile is-ancestor daysForecast">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">One</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Two</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Three</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Four</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Five</p>
-                <p class="subtitle">Subtitle</p>
-            </article>
-        </div>
-    </div>
 
-    <footer class="footer">
-        <div class="content has-text-centered">
-            <p>
-                Copyright &copy; 2021 Tracy Angell.
-            </p>
+        <div class="daysForecast columns">
+            <div id="forecastDiv1" class="column is-one-fifth">
+                <h5 id=date1></h5>
+                <p id="temperature1" class="temperature"></p>
+                <img id="wicon1" alt="weather icon">
+                <p id="humidity1" class="humidity"></p>
+            </div>
+            <div id="forecastDiv2" class="column is-one-fifth">
+                <h5 id=date2></h5>
+                <p id="temperature2" class=" temperature mt-1"></p>
+                <img id="wicon2" alt="weather icon">
+                <p id="humidity2" class="humidity"></p>
+            </div>
+            <div id="forecastDiv3" class="column is-one-fifth">
+                <h5 id=date3></h5>
+                <p id="temperature3" class="mt-1"></p>
+                <img id="wicon3" alt="weather icon">
+                <p id="humidity3" class="humidity"></p>
+            </div>
+            <div id="forecastDiv4" class="column is-one-fifth">
+                <h5 class="text-center" id=date4></h5>
+                <p id="temperature4" class="mt-1 temperature"></p>
+                <img id="wicon4" alt="weather icon">
+                <p id="humidity4" class="humidity"></p>
+            </div>
+            <div id="forecastDiv5" class="column is-one-fifth">
+                <h5 class=text-center id=date5></h5>
+                <p id="temperature5" class="mt-2 temperature"></p>
+                <img id="wicon5" alt="weather icon">
+                <p id="humidity5" class="humidity"></p>
+            </div>
         </div>
-    </footer>
-    </div>
 
+
+        <!-- 5 day forcast results container -->
+        <div class="tile is-ancestor daysForecast">
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">One</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
+            </div>
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">Two</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
+            </div>
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">Three</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
+            </div>
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">Four</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
+            </div>
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <p class="title">Five</p>
+                    <p class="subtitle">Subtitle</p>
+                </article>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>
+                    Copyright &copy; 2021 Tracy Angell.
+                </p>
+            </div>
+        </footer>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./Assets/js/script.js"></script>
 
 </body>
