--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <a class="button is-info" id="bttnSearch"><i class="fas fa-search" aria-hidden="true"></i></a>
                                 </div>
                             </div>
-                            <div id="search" class="columns">
+                            <div id="search" class="columns level">
                                 <div id="recentSearches" class="column is-two-thirds-desktop is-full-tablet is-full-mobile">
                                     <!-- recent searches will be displayed here -->
                                 </div>
@@ -50,10 +50,12 @@
                     </div>
                 </div>
                 <!-- Current Weather Conditions -->
-                <div class="containerConditions tile is-ancestor">
-                    <div class="columns ">
-                        <article id="currentConditions" class="title column is-two-thirds-desktop is-full-tablet is-full-mobile is-child-box">
-                            <!-- content will be appended here-->
+                <div class="containerConditions tile is-ancestor box is-centered">
+                    <div class="columns tile is-parent">
+                        <article class="title column is-two-thirds-desktop is-full-tablet is-full-mobile is-child">
+                            <div id="currentConditions" class="column">
+                                <!-- content will be appended here-->
+                            </div>
                             <div class="column">
                                 <span id="iconSpan"></span><img style="font-size: 5rem;" id="wicon">
                             </div>
@@ -63,100 +65,58 @@
             </div>
         </div>
 
-        <!-- display results -->
-        <div class="tile is-ancestor">
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">Results</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-        </div>
-
         <!-- display 5 days forecast -->
         <div class="daysForecastheader columns">
             <div class="column">
-                <h3 id="forecasth3">5 days Forecast
+                <h3 class="title is-4" id="forecasth3">5 Day Forecast
                     <h3>
             </div>
         </div>
 
         <div class="daysForecast columns">
-            <div id="forecastDiv1" class="column is-one-fifth">
-                <h5 id=date1></h5>
+            <div id="forecastDiv1" class="column is-one-fifth box">
+                <h5 class="has-text-centered" id="date1"></h5>
                 <p id="temperature1" class="temperature"></p>
                 <img id="wicon1" alt="weather icon">
                 <p id="humidity1" class="humidity"></p>
             </div>
-            <div id="forecastDiv2" class="column is-one-fifth">
-                <h5 id=date2></h5>
-                <p id="temperature2" class=" temperature mt-1"></p>
+            <div id="forecastDiv2" class="column is-one-fifth box">
+                <h5 class="has-text-centered" id="date2"></h5>
+                <p id="temperature2" class="temperature"></p>
                 <img id="wicon2" alt="weather icon">
                 <p id="humidity2" class="humidity"></p>
             </div>
-            <div id="forecastDiv3" class="column is-one-fifth">
-                <h5 id=date3></h5>
-                <p id="temperature3" class="mt-1"></p>
+            <div id="forecastDiv3" class="column is-one-fifth box">
+                <h5 class="has-text-centered" id="date3"></h5>
+                <p id="temperature3" class="temperature"></p>
                 <img id="wicon3" alt="weather icon">
                 <p id="humidity3" class="humidity"></p>
             </div>
-            <div id="forecastDiv4" class="column is-one-fifth">
-                <h5 class="text-center" id=date4></h5>
-                <p id="temperature4" class="mt-1 temperature"></p>
+            <div id="forecastDiv4" class="column is-one-fifth box">
+                <h5 class="has-text-centered" id="date4"></h5>
+                <p id="temperature4" class="temperature"></p>
                 <img id="wicon4" alt="weather icon">
                 <p id="humidity4" class="humidity"></p>
             </div>
-            <div id="forecastDiv5" class="column is-one-fifth">
-                <h5 class=text-center id=date5></h5>
-                <p id="temperature5" class="mt-2 temperature"></p>
-                <img id="wicon5" alt="weather icon">
+            <div id="forecastDiv5" class="column is-one-fifth box">
+                <h5 class="has-text-centered" id="date5"></h5>
+                <p id="temperature5" class="temperature"></p>
+                <img id="wicon5" alt="weather_icon">
                 <p id="humidity5" class="humidity"></p>
             </div>
         </div>
-
-
-        <!-- 5 day forcast results container -->
-        <div class="tile is-ancestor daysForecast">
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">One</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">Two</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">Three</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">Four</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-            <div class="tile is-parent">
-                <article class="tile is-child box">
-                    <p class="title">Five</p>
-                    <p class="subtitle">Subtitle</p>
-                </article>
-            </div>
-        </div>
-
-        <footer class="footer">
-            <div class="content has-text-centered">
-                <p>
-                    Copyright &copy; 2021 Tracy Angell.
-                </p>
-            </div>
-        </footer>
     </div>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+                Copyright &copy; 2021 Tracy Angell.
+            </p>
+        </div>
+    </footer>
+
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./Assets/js/script.js"></script>
 
