additional css and script updates
attempted to work on uv index color coding

--- a/index.html
+++ b/index.html
@@ -68,12 +68,11 @@
         <!-- display 5 days forecast -->
         <div class="daysForecastheader columns">
             <div class="column">
-                <h3 class="title is-4" id="forecasth3">5 Day Forecast
-                    <h3>
+                <h3 id="forecasth3">5 Day Forecast</h3>
             </div>
         </div>
 
-        <div class="daysForecast columns">
+        <div class="daysForecast is-centered columns is-variable is-1-mobile is-0-tablet is-3-desktop is-8-widescreen is-2-fullhd">
             <div id="forecastDiv1" class="column is-one-fifth box">
                 <h5 class="has-text-centered" id="date1"></h5>
                 <p id="temperature1" class="temperature"></p>
@@ -107,6 +106,7 @@
         </div>
     </div>
 
+
     <footer class="footer">
         <div class="content has-text-centered">
             <p>
@@ -115,7 +115,6 @@
         </div>
     </footer>
 
-    </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./Assets/js/script.js"></script>
